k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kuber-dp
  labels:
    app: kuber-dp
spec:
  replicas: 1
  minReadySeconds: 10
  strategy:
    rollingUpdate:
      maxSurge: 1 # шаг изменения по 1ому. Один гасится, один запускается
      maxUnavailable: 1 # мах число Подов недоступных, при обновлении
    type: RollingUpdate
  selector:
    matchLabels:
      env: prod
  template:
    metadata:
      labels:
        env: prod
    spec:
      containers:
        - name: kuber-app
          image: alxinsh/docker-java-test-app:9.0.14
          ports:
            - containerPort: 8000
          startupProbe:
            httpGet:
              path: /startup
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 10
            timeoutSeconds: 5
          livenessProbe:
            httpGet:
              path: /liveness
              port: 8000
            #          initialDelaySeconds: 25
            periodSeconds: 5
            timeoutSeconds: 3
          readinessProbe:
            httpGet:
              path: /readiness
              port: 8000
            #          initialDelaySeconds: 25
            periodSeconds: 5
            timeoutSeconds: 3
          resources:
            limits:
              cpu: 0.5
              memory: 2000Mi
