k8s/ingress-hw10.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kuber-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: arch.homework
    http:
      paths:
      - path: /health
        pathType: Prefix
        backend:
          service:
            name: kuber-service
            port:
              number: 80

      # Second path for CPU tests
      - path: /load-cpu
        pathType: Prefix
        backend:
          service:
            name: kuber-service
            port:
              number: 80

      - path: /allocate-memory
        pathType: Prefix
        backend:
          service:
            name: kuber-service
            port:
              number: 80

      - path: /version
        pathType: Prefix
        backend:
          service:
            name: kuber-service
            port:
              number: 80
